Change background img name to 'vintage-background'

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ html .container {
 }
 
 body {
-  background-image: url(../img/pizza-background.jpg);
+  background-image: url(../img/vintage-background.jpg);
   opacity: 0.9;
 }
 
