Change 'vintage-background' file extension to all caps

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ html .container {
 }
 
 body {
-  background-image: url(../img/vintage-background.jpg);
+  background-image: url(../img/vintage-background.JPG);
   opacity: 0.9;
 }
 
