--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ html .container {
 }
 
 body {
-  background-image: url(../img/vintage-background.JPG);
+  background-image: url(../img/vintage-background.jpg);
   opacity: 0.9;
 }
 
@@ -31,11 +31,10 @@ h2 {
   color: #fff;
 }
 
-
 li {
   list-style-type: none;
   font-style: italic;
-  font-size: 2em;
+  font-size: 20px;
 }
 
 label {
@@ -67,6 +66,7 @@ input {
 .key-words {
   font-weight: bold;
 }
+
 
 .show-order h2 {
   color: black;
